# agent_lib

./: .gitignore  CLAUDE.md  Makefile  README.md  doc.md  plan.md  pyproject.toml  pyrightconfig.json
src/agent_lib/: main.py
src/agent_lib/agent/: Agent.py  AgentRuntime.py  AgentState.py  LLMClient.py  Tool.py  response_helpers.py  text_generator.py  tool_calls_schema.json
src/agent_lib/agent_app/: AgentRuntime.py
src/agent_lib/component/: ContextComponent.py  CxtComponent.py  Props.py
src/agent_lib/context/: CtxComponent.py  CxtComponent.py  Props.py  to_messages.py
src/agent_lib/context/components/: ChatMessages.py  CodeBlock.py  Items.py  LLMContext.py  Tag.py
src/agent_lib/examples/: async_action_example.py  async_action_type_error_test.py  test_fetch_data_async_action_store.py  transcription.py  transcription_with_store.py
src/agent_lib/llm_integrations/: shared_types.py
src/agent_lib/store/: Action.py  Agents.py  AsyncAction.py  Fanouts.py  State.py  Store.py  Subscribers.py  snapshot.py
src/agent_lib/tool/: Tool.py  ToolMetadata.py
src/agent_lib/util/: json_utils.py
tests/: test_main.py
tests/agent/: test_agent_LLM.py  test_agent_runtime_LLM.py  test_post_process_response_LLM.py
tests/store/: benchmark_diff_LLM.py  test_async_action_LLM.py  test_async_action_instance_LLM.py  test_fanouts_LLM.py  test_record_history_LLM.py  test_scope_filtering_LLM.py  test_store_LLM.py  test_store_notifications_LLM.py  test_store_subscription_LLM.py  test_sync_action_decorator_LLM.py  test_validate_agent_state_LLM.py
tests/util/: test_json_utils_LLM.py
(+14 files in other folders)
