[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=69", "wheel"]

[project]
authors = [{name = "Avi Craimer"}]
dependencies = [
  "deepdiff>=8.0",
  "anthropic>=0.40",
  "python-dotenv>=1.0",
  "jsonschema>=4.0",
]
description = "A Python project"
license = {text = "MIT"}
name = "agent_lib"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "ruff",
  "pyright",
]

[project.scripts]
agent-lib = "agent_lib.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
ignore = ["E203"]
preview = true
select = ["E", "F", "I", "UP", "B"] # pycodestyle, pyflakes, isort, pyupgrade, bugbear

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"
